syntax = "proto3";

package kr.ac.postech.paranode.rpc;

service Exchange {
    rpc SaveRecords (SaveRecordsRequest) returns (SaveRecordsReply) {}
}

message SaveRecordsRequest {
    repeated bytes records = 1;
}

message SaveRecordsReply {}
